refresh live site with new projects

--- a/src/data/projects.yml
+++ b/src/data/projects.yml
@@ -16,28 +16,28 @@ categories:
         url: //esri.github.io/esri-leaflet/
         displayLang: JavaScript
         searchLang: javascript
-        stars: 691
-      - title: Calcite Web
-        description: A Responsive HTML, CSS, and JS Framework.
+        stars: 783
+      - title: React ArcGIS
+        description: A react component kit for the ArcGIS API for JavaScript.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //esri.github.io/calcite-web/
-        displayLang: CSS
-        searchLang: css
-        stars: 39
+        url: https://github.com/nicksenger/react-arcgis
+        displayLang: JavaScript
+        searchLang: javascript
+        stars: 21
       - title: Cedar
-        description: Charts for ArcGIS GeoServices
+        description: Charts for ArcGIS Services
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //esri.github.io/cedar/
         displayLang: JavaScript
         searchLang: javascript
-        stars: 148
+        stars: 167
       - title: LERC
         description: rapid encoding and decoding for any pixel type (not just RGB or Byte)
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/Esri/lerc
         displayLang: C++
         searchLang: c%2B%2B
-        stars: 36
+        stars: 50
   - title: Data Management
     url: https://github.com/Esri?q=topic%3Adata-management
     anchor: data-management
@@ -55,28 +55,28 @@ categories:
         url: //koopjs.github.io/
         displayLang: JavaScript
         searchLang: javascript
-        stars: 314
+        stars: 349
       - title: Geometry Engine
         description: Fundamental spatial data types and analyses
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/Esri/geometry-api-java/wiki
         displayLang: Java
         searchLang: java
-        stars: 242
+        stars: 291
       - title: Terraformer
         description: Library to convert common spatial data formats.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //terraformer.io
         displayLang: JavaScript
         searchLang: javascript
-        stars: 378
-      - title: OSM Editor
-        description: Desktop toolbox for accessing and editing OpenStreetMap.
+        stars: 408
+      - title: AGO Assistant
+        description: A swiss army knife for your ArcGIS Online and Portal for ArcGIS accounts.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/arcgis-osm-editor
-        displayLang: C#
-        searchLang: c%23
-        stars: 123
+        url: //github.com/Esri/ago-assistant
+        displayLang: JavaScript
+        searchLang: javascript
+        stars: 88
   - title: Spatial Analysis
     url: https://github.com/Esri?q=topic%3Aspatial-analysis
     anchor: spatial-analysis
@@ -88,35 +88,35 @@ categories:
         url: //github.com/Esri/PySAL-ArcGIS-Toolbox
         displayLang: C#
         searchLang: c%23
-        stars: 7
+        stars: 16
       - title: GIS Tools for Hadoop
         description: Integrate ArcGIS with Hadoop big data processing.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/Esri/gis-tools-for-hadoop
         displayLang: Java
         searchLang: java
-        stars: 289
+        stars: 310
       - title: R Analysis
         description: Develop and share R statistical analysis with ArcGIS.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //r-arcgis.github.io/
         displayLang: R
         searchLang: r
-        stars: 47
-      - title: PySAL
-        description: Python library for spatial analysis.
+        stars: 91
+      - title: Solutions GP Toolbox
+        description: Models, scripts, and tools for use in ArcGIS for Desktop and ArcGIS Pro.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/PySAL-ArcGIS-Toolbox
+        url: //github.com/Esri/solutions-geoprocessing-toolbox
         displayLang: Python
         searchLang: python
-        stars: 7
+        stars: 83
       - title: Spark Point in Polygon
         description: Spark job to perform massive Point in Polygon (PiP) operations on a distributed share-nothing cluster.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/mraad/spark-pip
         displayLang: Scala
         searchLang: scala
-        stars: 15
+        stars: 19
   - title: Publishing and Sharing
     url: https://github.com/Esri?q=topic%3Apublishing-sharing
     anchor: publishing-sharing
@@ -128,34 +128,34 @@ categories:
         url: //github.com/Esri/storymap-crowdsource
         displayLang: JavaScript
         searchLang: javascript
-      - title: Compare Maps
-        description: Web app for comparing different maps.
+      - title: Public Information Template
+        description: Social media map for disaster response and public information.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/Compare-Maps-Template
+        url: //github.com/Esri/public-information-map-template-js
         displayLang: JavaScript
         searchLang: javascript
-        stars: 3
+        stars: 39
       - title: Historic Map Explorer
         description: Web app to explore digitized map overlays.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/Esri/map-collection-explorer
         displayLang: JavaScript
         searchLang: javascript
-        stars: 5
+        stars: 8
       - title: Open Data
         description: Web components for integrating data into civic sites.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/esridc/opendata-search-component
         displayLang: JavaScript
         searchLang: javascript
-        stars: 3
+        stars: 14
       - title: Styler
         description: A configurable application for creating, styling and sharing modern 2D and 3D map apps
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/Esri/calcite-maps-styler-template
         displayLang: JavaScript
         searchLang: javascript
-        stars: 11
+        stars: 14
   - title: Native Development
     url: https://github.com/Esri?q=topic%3Anative-development
     anchor: native-development
@@ -173,25 +173,25 @@ categories:
         url: //github.com/Esri/ecological-marine-unit-android
         displayLang: Android
         searchLang: java
-        stars: 2
-      - title: Geocoding with Suggestions
-        description: An online geocoding iOS sample app, modernized with suggestions and category support. The samples use ArcGIS Online basemaps and services.
+        stars: 4
+      - title: ArcGIS Toolkit .NET
+        description: Controls and utilities you can use with the ArcGIS Runtime SDK for .NET.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
-        url: //github.com/Esri/geocoding-with-suggestions-and-categories
-        displayLang: Objective-C
-        searchLang: ios
-        stars: 2
+        url: //github.com/Esri/arcgis-toolkit-dotnet
+        displayLang: C#
+        searchLang: c-sharp
+        stars: 50
       - title: Vehicle Commander
         description: The Vehicle Commander template demonstrates best practices for building in-vehicle military applications with ArcGIS and Java.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/Esri/vehicle-commander-java
         displayLang: Java
         searchLang: java
-        stars: 10
+        stars: 12
       - title: Nearby-Places Android
         description: Locate nearby places with Android devices. Built with the ArcGIS Runtime SDK for Android. With some minor customization, you can change the types of places displayed.
         image: //developers.arcgis.com/assets/img/homepage/promo-python.png
         url: //github.com/Esri/nearby-android
         displayLang: Android
         searchLang: android
-        stars: 5
+        stars: 10
