Add topic tag to discover example apps
This tag will be included in each Example App going forward.

--- a/src/data/search-topics.yml
+++ b/src/data/search-topics.yml
@@ -28,6 +28,7 @@
   - tag: emergency-management
   - tag: enterprise
   - tag: esri
+  - tag: example-app
   - tag: geocoding
   - tag: geometry
   - tag: geoprocessing
