--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "document-register-element": "1.2.0",
     "nan": "git+https://github.com/nodejs/nan.git",
     "rxjs": "5.0.1",
-    "url-parse": "1.1.3",
+    "url-parse": "^1.4.3",
     "whatwg-fetch": "1.0.0",
     "xml2js": "^0.4.17",
     "zone.js": "0.7.2"
@@ -107,8 +107,8 @@
     "time-grunt": "1.4.0",
     "typescript": "2.0.10",
     "unzip": "^0.1.11",
-    "webpack": "2.1.0-beta.28",
-    "webpack-dev-server": "2.1.0-beta.12",
+    "webpack": "^2.1.0",
+    "webpack-dev-server": "^2.1.0",
     "webpack-merge": "^2.0.0",
     "x-ray": "^2.3.3"
   },
