--- a/src/data/projects.yml
+++ b/src/data/projects.yml
@@ -15,25 +15,25 @@ categories:
         url: //esri.github.io/cedar/
         displayLang: JavaScript
         searchLang: javascript
-        stars: 189
+        stars: 200
       - title: Webpack Plugin
         description: Build ArcGIS API for JavaScript applications with webpack
         url: //github.com/Esri/arcgis-webpack-plugin
         displayLang: JavaScript
         searchLang: javascript
-        stars: 28
+        stars: 45
       - title: Esri Leaflet
         description: Leaflet plugins for the most popular ArcGIS web services
         url: //esri.github.io/esri-leaflet/
         displayLang: JavaScript
         searchLang: javascript
-        stars: 896
+        stars: 986
       - title: ArcGIS REST JS
         description: Compact, modular JavaScript wrappers for the ArcGIS REST API
         url: //esri.github.io/arcgis-rest-js/
         displayLang: JavaScript
         searchLang: javascript
-        stars: 57
+        stars: 114
   - title: Data Management
     url: https://github.com/Esri?q=topic%3Adata-management
     anchor: data-management
@@ -50,25 +50,25 @@ categories:
         url: //koopjs.github.io/
         displayLang: JavaScript
         searchLang: javascript
-        stars: 385
+        stars: 409
       - title: Geometry Engine
         description: Fundamental spatial data types and analyses.
         url: //github.com/Esri/geometry-api-java/wiki
         displayLang: Java
         searchLang: java
-        stars: 354
+        stars: 398
       - title: Terraformer
         description: Library to convert common spatial data formats.
         url: //terraformer.io
         displayLang: JavaScript
         searchLang: javascript
-        stars: 453
+        stars: 489
       - title: AGO Assistant
         description: A swiss army knife for your ArcGIS Online and Portal for ArcGIS accounts.
         url: //github.com/Esri/ago-assistant
         displayLang: JavaScript
         searchLang: javascript
-        stars: 97
+        stars: 102
   - title: Spatial Analysis
     url: https://github.com/Esri?q=topic%3Aspatial-analysis
     anchor: spatial-analysis
@@ -80,31 +80,31 @@ categories:
         url: //github.com/Esri/PySAL-ArcGIS-Toolbox
         displayLang: C#
         searchLang: c%23
-        stars: 16
+        stars: 26
       - title: GIS Tools for Hadoop
         description: Integrate ArcGIS with Hadoop big data processing.
         url: //github.com/Esri/gis-tools-for-hadoop
         displayLang: Java
         searchLang: java
-        stars: 345
+        stars: 366
       - title: R Analysis
         description: Develop and share R statistical analysis with ArcGIS.
         url: //r-arcgis.github.io/
         displayLang: R
         searchLang: r
-        stars: 109
+        stars: 117
       - title: Solutions GP Toolbox
         description: Models, scripts, and tools for use in ArcGIS for Desktop and ArcGIS Pro.
         url: //github.com/Esri/solutions-geoprocessing-toolbox
         displayLang: Python
         searchLang: python
-        stars: 94
+        stars: 103
       - title: LERC
         description: Rapid encoding and decoding for any pixel type (not just RGB or Byte).
         url: //github.com/Esri/lerc
         displayLang: C++
         searchLang: c%2B%2B
-        stars: 56
+        stars: 70
   - title: Publishing and Sharing
     url: https://github.com/Esri?q=topic%3Apublishing-sharing
     anchor: publishing-sharing
@@ -113,7 +113,7 @@ categories:
       - title: The Smithsonian
         description: The Smithsonian maintains vast archives of cultural heritage.  They use Story Maps to provide the rich history and spatial context of our world.
         image: /assets/img/projects/storymap-smithsonian.png
-        url: //github.com/Esri/storymap-crowdsource
+        url: //github.com/Esri/storymap-tour
         displayLang: JavaScript
         searchLang: javascript
       - title: React ArcGIS
@@ -121,25 +121,25 @@ categories:
         url: https://github.com/nicksenger/react-arcgis
         displayLang: JavaScript
         searchLang: javascript
-        stars: 65
+        stars: 90
       - title: Esri Loader
         description: A tiny library to help load ArcGIS API for JavaScript modules in non-Dojo applications.
         url: //github.com/Esri/esri-loader
         displayLang: JavaScript
         searchLang: javascript
-        stars: 151
-      - title: Styler
-        description: A configurable application for creating, styling and sharing modern 2D and 3D map apps
-        url: //github.com/Esri/calcite-maps-styler-template
+        stars: 209
+      - title: i3s-spec
+        description: A specification for arbitrarily large amounts of geographic data..
+        url: //github.com/Esri/i3s-spec
         displayLang: JavaScript
         searchLang: javascript
-        stars: 18
+        stars: 86
       - title: Maps App
         description: A progressive web app that loads the ArcGIS API for JavaScript.
         url: //github.com/Esri/maps-app-javascript
         displayLang: JavaScript
         searchLang: javascript
-        stars: 30
+        stars: 41
   - title: Native Development
     url: https://github.com/Esri?q=topic%3Anative-development
     anchor: native-development
@@ -151,28 +151,28 @@ categories:
         url: //github.com/Esri/indoor-routing-xamarin
         displayLang: C#
         searchLang: csharp
-        stars: 26
+        stars: 29
       - title: Mapbook iOS
         description: Replace the paper maps you use for field work with offline maps. Uses the ArcGIS Runtime SDK for iOS.
         url: //github.com/Esri/mapbook-ios
         displayLang: Swift
         searchLang: swift
-        stars: 3
+        stars: 5
       - title: ArcGIS Toolkit .NET
         description: Controls and utilities you can use with the ArcGIS Runtime SDK for .NET.
         url: //github.com/Esri/arcgis-toolkit-dotnet
         displayLang: C#
         searchLang: csharp
-        stars: 63
+        stars: 68
       - title: Dynamic Situational Awareness
         description: Built using the ArcGIS Runtime SDK for Qt, DSA highlights developer best practices for the specific workflows for in-vehicle (mounted) and field (handheld/dismounted) teams who need to dynamically understand their environment and the situation around them.
         url: //github.com/Esri/dynamic-situational-awareness-qt
         displayLang: C++
         searchLang: c%2B%2B
-        stars: 9
+        stars: 12
       - title: Nearby-Places Android
         description: Locate nearby places with Android devices. Built with the ArcGIS Runtime SDK for Android. With some minor customization, you can change the types of places displayed.
         url: //github.com/Esri/nearby-android
         displayLang: Android
         searchLang: android
-        stars: 18
+        stars: 24
