First pass of audit fixes

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eslint-config-standard": "^6.0.1",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
-    "grunt": "^1.0.3",
+    "grunt": "^1.0.4",
     "grunt-acetate": "^1.1.2",
     "grunt-concurrent": "^2.0.0",
     "grunt-contrib-clean": "~1.0.0",
@@ -83,7 +83,7 @@
     "grunt-webpack": "2.0.0-beta.5",
     "husky": "0.11.8",
     "jasmine-core": "^2.4.1",
-    "js-yaml": "3.6.1",
+    "js-yaml": "^3.13.1",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -91,10 +91,10 @@
     "karma-jasmine-diff-reporter": "^0.6.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "markdown-it-toc": "git+https://git@github.com/kneemer/markdown-it-toc",
     "matchdep": "1.0.1",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.12.0",
     "nunjucks": "^2.5.2",
     "nunjucks-date-filter": "0.1.1",
     "progress-bar-webpack-plugin": "^1.9.1",
