--- a/src/data/projects.yml
+++ b/src/data/projects.yml
@@ -145,34 +145,34 @@ categories:
     anchor: native-development
     color: yellow
     projects:
+      - title: Data Collection iOS
+        description: Perform field data collection online or offline, view and synchronize edits, work with features, pop ups, web maps, and related records. Uses the ArcGIS Runtime SDK for iOS.
+        image: /assets/img/projects/data-collection-ios.png
+        url: //github.com/Esri/data-collection-ios
+        displayLang: Swift
+        searchLang: swift
+        stars: 8
       - title: Indoor Routing Xamarin
         description: Indoor routing for iOS devices built in Xamarin with the ArcGIS Runtime SDK for .NET. With some customization, you can change the app to use your indoor data and locators.
-        image: /assets/img/projects/indoor-routing-xamarin.png
         url: //github.com/Esri/indoor-routing-xamarin
         displayLang: C#
         searchLang: csharp
-        stars: 32
-      - title: Mapbook iOS
-        description: Replace the paper maps you use for field work with offline maps. Uses the ArcGIS Runtime SDK for iOS.
-        url: //github.com/Esri/mapbook-ios
-        displayLang: Swift
-        searchLang: swift
-        stars: 6
+        stars: 33
       - title: ArcGIS Toolkit .NET
         description: Controls and utilities you can use with the ArcGIS Runtime SDK for .NET.
         url: //github.com/Esri/arcgis-toolkit-dotnet
         displayLang: C#
         searchLang: csharp
-        stars: 74
+        stars: 78
       - title: Dynamic Situational Awareness
         description: Built using the ArcGIS Runtime SDK for Qt, DSA highlights developer best practices for the specific workflows for in-vehicle (mounted) and field (handheld/dismounted) teams who need to dynamically understand their environment and the situation around them.
         url: //github.com/Esri/dynamic-situational-awareness-qt
         displayLang: C++
         searchLang: c%2B%2B
-        stars: 16
+        stars: 17
       - title: Nearby-Places Android
         description: Locate nearby places with Android devices. Built with the ArcGIS Runtime SDK for Android. With some minor customization, you can change the types of places displayed.
         url: //github.com/Esri/nearby-android
         displayLang: Android
         searchLang: android
-        stars: 29
+        stars: 31
