Revert breaking dependencies

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@types/core-js": "^0.9.34",
     "@types/jasmine": "^2.2.34",
     "@types/node": "^6.0.41",
-    "acetate": "^2.1.0",
-    "angular": "^1.7.9",
+    "acetate": "^1.3.3",
+    "angular": "1.2.30",
     "angular-cookies": "1.2.30",
     "angular-highlightjs": "^0.6.1",
     "angular-loader": "1.5.8",
@@ -47,7 +47,7 @@
     "angular-ui-router": "0.2.10",
     "angular2-template-loader": "^0.6.0",
     "async": "^1.5.2",
-    "ava": "^3.1.0",
+    "ava": "^0.25.0",
     "awesome-typescript-loader": "^2.2.4",
     "babel": "^6.3.26",
     "babel-cli": "^6.26.0",
@@ -57,7 +57,7 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
     "calcite-web": "git+https://git@github.com/Esri/calcite-web.git#v1.0.0-rc.1",
-    "connect-modrewrite": "^0.10.2",
+    "connect-modrewrite": "^0.9.0",
     "core-js": "^2.4.1",
     "dotenv": "^2.0.0",
     "enhanced-resolve": "^3.0.2",
@@ -66,36 +66,36 @@
     "eslint-config-standard": "^6.0.1",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
-    "grunt": "^1.0.4",
+    "grunt": "^1.0.3",
     "grunt-acetate": "^1.1.2",
     "grunt-concurrent": "^2.0.0",
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-imagemin": "1.0.1",
     "grunt-contrib-uglify": "2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-gh-pages": "^2.0.0",
     "grunt-newer": "1.2.0",
-    "grunt-protractor-runner": "^5.0.0",
+    "grunt-protractor-runner": "3.2.0",
     "grunt-protractor-webdriver": "~0.2.0",
     "grunt-sass": "2.0.0",
     "grunt-webpack": "2.0.0-beta.5",
     "husky": "0.11.8",
     "jasmine-core": "^2.4.1",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "3.6.1",
     "json-loader": "^0.5.4",
-    "karma": "^4.4.1",
+    "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-diff-reporter": "^0.6.3",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "lodash": "^4.17.15",
+    "karma-webpack": "^1.8.0",
+    "lodash": "^4.17.10",
     "markdown-it-toc": "git+https://git@github.com/kneemer/markdown-it-toc",
-    "matchdep": "^2.0.0",
-    "node-sass": "^4.13.1",
-    "nunjucks": "^3.2.1",
+    "matchdep": "1.0.1",
+    "node-sass": "^4.9.0",
+    "nunjucks": "^2.5.2",
     "nunjucks-date-filter": "0.1.1",
     "progress-bar-webpack-plugin": "^1.9.1",
     "raw-loader": "0.5.1",
@@ -108,9 +108,9 @@
     "typescript": "2.0.10",
     "unzip": "^0.1.11",
     "webpack": "^2.1.0",
-    "webpack-dev-server": "^2.11.5",
+    "webpack-dev-server": "^2.1.0",
     "webpack-merge": "^2.0.0",
-    "x-ray": "^2.3.4"
+    "x-ray": "^2.3.3"
   },
   "scripts": {
     "test": "JOB_ENV=test karma start && ava test/build-validation",
