--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "grunt-webpack": "2.0.0-beta.5",
     "husky": "0.11.8",
     "jasmine-core": "^2.4.1",
-    "js-yaml": "3.13.1",
+    "js-yaml": "^3.13.1",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
